fix Purchase Tickets info alignment

--- a/app/style/PurchaseTickets.less
+++ b/app/style/PurchaseTickets.less
@@ -13,11 +13,12 @@
   height: 18px;
   padding: 21px 0 23px 29px;
   border-radius: 5px;
+  position: relative;
 }
 
 .stake-info {
-  margin-right: 100px;
   white-space: nowrap;
+  width: 33%;
 }
 
 .stake-info-details {
@@ -325,9 +326,6 @@
 }
 
 @media screen and (max-width: 1179px) {
-  .stake-info {
-    margin-right: 70px;
-  }
 
   .purchase-ticket-area {
     width: 667px;
@@ -379,12 +377,13 @@
     height: 115px;
   }
 
+  .stake-info-details,
   .stake-info-row-area {
     padding-left: 20px;
   }
 
   .stake-info {
-    margin-right: 40px;
+    width: 50%;
   }
   
   .purchase-ticket-area-row {
